# studio_site_configs

./: README.md
roscon2022_site_config/: CMakeLists.txt  package.xml
roscon2022_site_config/config/: cameras.yaml  site_config.yaml
roscon2022_site_config/config/moveit/: picknik_ur5e_roscon2022.srdf
roscon2022_site_config/description/: picknik_ur5e_roscon2022.xacro
roscon2022_site_config/meshes/: roscon_booth.dae
roscon2022_site_config/waypoints/: waypoints.yaml
