<?xml version="1.0"?>
<package format="3">
  <name>roscon2022_site_config</name>
  <version>1.3.0</version>

  <description>Site config package for ROSCon 2022.</description>

  <maintainer email="marq.rasmussen@picknik.ai">Marq Rasmussen</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>s

  <depend>picknik_ur5e_base_config</depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
